<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/back_main">

    <TextView android:text="@string/Welcome" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="@style/CustomWelcome"
        android:lines="1"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/main_layout"
            android:weightSum="1"
            android:layout_marginBottom="40dp">

            <Button
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/BiereLink"
                android:onClick="ourBeer"
                android:id="@+id/button2" />

            <Button
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/ConceptLink"
                android:id="@+id/button3"
                android:onClick="concept" />

            <Button
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/CommandLink"
                android:id="@+id/button4"
                android:onClick="order" />

            <Button
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/ContactLink"
                android:id="@+id/button6"
                android:onClick="contact" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
