<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jerome.myfut.OurBeer">

    <TextView android:text="@string/ourbeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:src="@drawable/ladbc"
        android:contentDescription="@string/access_facebook"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/ourbeer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
